# k8s-autoannotator

./: .dockerignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  auto-annotator.py  pyproject.toml
.github/workflows/: build-docker.yml  release.yml
k8s/: example-cronjob.yaml
src/auto_annotator/: auto_annotator.py
