[tool.poetry]
name = "k8s_auto_annotator"
version = "0.2.0"
description = ""
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "auto_annotator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^26.1.0"

[tool.poetry.scripts]
auto-annotate = "k8s_auto_annotator.auto_annotator:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.3.5"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.1.1"}
pre-commit = ">=2.12.1"
reorder-python-imports = "^3.8.2"
pre-commit-hooks = "^4.4.0"
pytest-cov = "^3.0.0"
ruff = "^0.0.252"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
